# simpleCalculator

./: CMakeLists.txt  README.md
source/: AST.cpp  AST.h  cli.cpp  lex.cpp  lex.h  parse.cpp  parse.h
